# SDL2-3d-rendering

./: CMakeLists.txt  MathsVector.cpp  MathsVector.h  main.cpp
src/: env.hpp
src/Model/: World.cpp  World.h
src/Model/Entities/: Spaceship.cpp  Spaceship.h
src/algebra/: InvalidMatrixDimensionsException.h  MathsVector.cpp  MathsVector.h  Matrix.cpp  Matrix.h  Transform.cpp  Transform.h  Transformation.cpp  Transformation.h
src/input/: Input.cpp  Input.hpp  InputRegistry.cpp  InputRegistry.hpp  KeyCode.hpp  PressState.hpp
src/model/: World.cpp  World.h
src/model/Entities/: Entity.cpp  Entity.h  Mesh.cpp  Mesh.h  MeshPane.cpp  MeshPane.h  Spaceship.cpp  Spaceship.h
src/view/: Camera.cpp  Camera.hpp  GraphPlotter.cpp  GraphPlotter.h  Rendering.cpp  Rendering.h  World.cpp  World.h
src/view/Entities/: Entity.cpp  Entity.h  Mesh.cpp  Mesh.h  Spaceship.cpp  Spaceship.h
src/view/RenderingStrategies/: CameraView.cpp  CameraView.h  FrontView.cpp  FrontView.h  RenderingStrategy.cpp  RenderingStrategy.h  SideView.cpp  SideView.h  TopView.cpp  TopView.h
tests/: AlgebraTests.cpp
view/: GraphPlotter.cpp  GraphPlotter.h
